--- a/Chromi/LaunchScreen.storyboard
+++ b/Chromi/LaunchScreen.storyboard
@@ -15,14 +15,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="fW3-Mp-tVn">
-                                <rect key="frame" x="96.666666666666686" y="326" width="200" height="200"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalCentering" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="fW3-Mp-tVn">
+                                <rect key="frame" x="86.666666666666686" y="316" width="220" height="220"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Chromi" translatesAutoresizingMaskIntoConstraints="NO" id="akl-9X-ZgK">
-                                        <rect key="frame" x="0.0" y="0.0" width="200" height="140"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="220" height="139.66666666666666"/>
                                     </imageView>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Chromi" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="GJd-Yh-RWb">
-                                        <rect key="frame" x="0.0" y="150" width="200" height="50"/>
+                                        <rect key="frame" x="0.0" y="144.66666666666669" width="220" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="iL6-xH-TXv"/>
                                         </constraints>
@@ -30,10 +30,16 @@
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iNW-zZ-ChI">
+                                        <rect key="frame" x="0.0" y="199.66666666666663" width="220" height="20.333333333333343"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="200" id="5tC-jP-MaM"/>
-                                    <constraint firstAttribute="height" constant="200" id="f59-nT-H8Q"/>
+                                    <constraint firstAttribute="width" constant="220" id="5tC-jP-MaM"/>
+                                    <constraint firstAttribute="height" constant="220" id="f59-nT-H8Q"/>
                                 </constraints>
                             </stackView>
                         </subviews>
